blog/news component for dark obliviot theme

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
@@ -29,57 +29,10 @@
                 <header class="classes.obliviot_darkHeader">
                     <div data-component-value="{this.props.navContent}"></div>
                 </header>
-                <div  id="sponsors" data-component-value="{this.props.topSponsorContent}">
-                        
-                </div>
+                <div  id="sponsors" data-component-value="{this.props.topSponsorContent}"></div>
                 <div class="classes.obliviot_darkBlogContainer">
                     <div class="ui stackable two column grid">
-                        <div class="seven wide column">
-                            <div class="classes.obliviot_darkBlogMaxContainer">
-                                <img class="classes.obliviot_main_news_item_image" data-component-props="src={this.props.blog_media}" src="../images/news_test_1.jpg" />    
-                                <div class="classes.obliviot_main_news_content_container">
-                                    <div>
-                                        <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                                            <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title}">We are live with a very long title</span>
-                                        </div>
-                                    </div>
-                                    <div style="width: 100%;height: 68px; overflow-y: hidden;" data-component-value="{this.props.blog_content}">
-                                        <p class="classes.obliviot_dark_news_body" >We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
-                                    </div>
-                                    <div class="classes.obliviot_dark_news_decor"></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="nine wide column">
-                            <div class="classes.obliviot_darkBlogMiniContainer">
-                                <img class="classes.obliviot_main_news_item_mini_image" data-component-props="src={this.props.blog_media}" src="../images/news_mini_image.jpg" />    
-                                <div class="classes.obliviot_main_news_content_container">
-                                    <div>
-                                        <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                                            <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title}">We are live with a very long title</span>
-                                        </div>
-                                    </div>
-                                    <div style="width: 100%;height: 68px; overflow-y: hidden;" data-component-value="{this.props.blog_content}">
-                                        <p class="classes.obliviot_dark_news_body" >We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
-                                    </div>
-                                    <div class="classes.obliviot_dark_news_decor"></div>
-                                </div>
-                            </div>
-                            <div class="classes.obliviot_darkBlogMiniContainer">
-                                <img class="classes.obliviot_main_news_item_mini_image" data-component-props="src={this.props.blog_media}" src="../images/news_mini_image.jpg" />    
-                                <div class="classes.obliviot_main_news_content_container">
-                                    <div>
-                                        <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                                            <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title}">We are live with a very long title</span>
-                                        </div>
-                                    </div>
-                                    <div style="width: 100%;height: 68px; overflow-y: hidden;" data-component-value="{this.props.blog_content}">
-                                        <p class="classes.obliviot_dark_news_body" >We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
-                                    </div>
-                                    <div class="classes.obliviot_dark_news_decor"></div>
-                                </div>
-                            </div>
-                        </div>
+                        <div data-component-value="{this.props.blogContent}"></div>
                     </div>
                 </div>
                 <div class="classes.obliviot_dark_section_control_container">
@@ -90,42 +43,6 @@
                 <div class="classes.obliviot_dark_twitch_container">
                     <div class="ui stackable three column grid">
                         <div data-component-value="{this.props.stitchContent}">Stitch</div>
-                        <div class="column">
-                            <div class="classes.obliviot_dark_twitch_feed_container">
-                                <div class="classes.obliviot_dark_twitch_title_container">
-                                    <div class="classes.obliviot_dark_twitch_title">STREAMZOR</div>
-                                    <div class="classes.obliviot_dark_twitch_subtitle">playerunknown's battlegrounds</div>
-                                </div>
-                                <div class="classes.obliviot_dark_user_online">
-                                    <img src="../images/molly.png" class="classes.obliviot_dark_user_image" />
-                                    <div class="classes.obliviot_dark_user_online_text">live</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="column">
-                            <div class="classes.obliviot_dark_twitch_feed_container">
-                                <div class="classes.obliviot_dark_twitch_title_container">
-                                    <div class="classes.obliviot_dark_twitch_title">STREAMZOR</div>
-                                    <div class="classes.obliviot_dark_twitch_subtitle">playerunknown's battlegrounds</div>
-                                </div>
-                                <div class="classes.obliviot_dark_user_offline">
-                                    <img src="../images/molly.png" class="classes.obliviot_dark_user_image" />
-                                    <div class="classes.obliviot_dark_user_online_text">offline</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="column">
-                            <div class="classes.obliviot_dark_twitch_feed_container">
-                                <div class="classes.obliviot_dark_twitch_title_container">
-                                    <div class="classes.obliviot_dark_twitch_title">STREAMZOR</div>
-                                    <div class="classes.obliviot_dark_twitch_subtitle">playerunknown's battlegrounds</div>
-                                </div>
-                                <div class="classes.obliviot_dark_user_offline">
-                                    <img src="../images/molly.png" class="classes.obliviot_dark_user_image" />
-                                    <div class="classes.obliviot_dark_user_online_text">offline</div>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <div>
@@ -163,7 +80,7 @@
                 <div id="bottom_nav" class="classes.obliviot_dark_bottom_nav">
                     <div class="ui stackable five column grid">
                         <div class="column">
-                            <img class="classes.obliviot_dark_bottom_nav_logo" src="../images/disrupt_logo.jpg" />
+                            <img data-component-props="src={this.props.image_src}" class="classes.obliviot_dark_bottom_nav_logo" src="../images/disrupt_logo.jpg" />
                         </div>
                         <div class="column">
                             <div class="classes.obliviot_dark_bottom_nav_title">NAVIGATION</div>
