added new render components for admin theme change

--- a/content_builder/src/html/themes/admin/OrganizationAdminNewThemeComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminNewThemeComponent.html
@@ -28,19 +28,19 @@
                 </div>
                 <div class="classes.theme_type_container">
                     <div data-component-props="style={this.props.enigma_dark_style} onClick={this.props.handleEnigmaDarkClick}" class="classes.admin_theme_display_container">
-                        <img class="classes.admin_theme_display_image" src="https://s3.amazonaws.com/origin-images/origin/dark-theme.jpg" />
+                        <img class="classes.admin_theme_display_image" data-component-props="src={this.props.enigma_dark_image}" src="https://s3.amazonaws.com/origin-images/origin/dark-theme.jpg" />
                         <div class="classes.admin_theme_display_text">Enigma Dark</div>
                     </div>
                     <div data-component-props="style={this.props.enigma_light_style} onClick={this.props.handleEnigmaLightClick}" class="classes.admin_theme_display_container">
-                        <img class="classes.admin_theme_display_image" src="https://s3.amazonaws.com/origin-images/origin/light-theme.jpg" />
+                        <img class="classes.admin_theme_display_image" data-component-props="src={this.props.enigma_light_image}" src="https://s3.amazonaws.com/origin-images/origin/light-theme.jpg" />
                         <div class="classes.admin_theme_display_text">Enigma Light</div>
                     </div>
                     <div data-component-props="style={this.props.obliviot_dark_style} onClick={this.props.handleObliviotDarkClick}" class="classes.admin_theme_display_container">
-                        <img class="classes.admin_theme_display_image" src="https://s3.amazonaws.com/origin-images/origin/dark-theme.jpg" />
+                        <img class="classes.admin_theme_display_image" data-component-props="src={this.props.obliviot_dark_image}" src="https://s3.amazonaws.com/origin-images/origin/dark-theme.jpg" />
                         <div class="classes.admin_theme_display_text">Obliviot Dark</div>
                     </div>
                     <div data-component-props="style={this.props.obliviot_light_style} onClick={this.props.handleObliviotLightClick}" class="classes.admin_theme_display_container">
-                        <img class="classes.admin_theme_display_image" src="https://s3.amazonaws.com/origin-images/origin/light-theme.jpg" />
+                        <img class="classes.admin_theme_display_image" data-component-props="src={this.props.obliviot_light_image}" src="https://s3.amazonaws.com/origin-images/origin/light-theme.jpg" />
                         <div class="classes.admin_theme_display_text">Obliviot Light</div>
                     </div>
                 </div>
