work on new theme implementation

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
@@ -27,12 +27,12 @@
             <div class="classes.obliviot_dark_bg_filter"></div>
             <div class="classes.obliviot_darkContraint">
                 <header class="classes.obliviot_darkHeader">
-                    <div data-component-value="{this.props.navContent}"></div>
+                    <div data-component-value="{this.props.navContent}">Nav</div>
                 </header>
-                <div  id="sponsors" data-component-value="{this.props.topSponsorContent}"></div>
+                <div  id="sponsors" data-component-value="{this.props.topSponsorContent}">Nav</div>
                 <div class="classes.obliviot_darkBlogContainer">
                     <div class="ui stackable two column grid">
-                        <div data-component-value="{this.props.blogContent}"></div>
+                        <div data-component-value="{this.props.blogContent}">Nav</div>
                     </div>
                 </div>
                 <div class="classes.obliviot_dark_section_control_container">
