--- a/content_builder/src/html/themes/enigma/light/OrganizationMatchesComponent.html
+++ b/content_builder/src/html/themes/enigma/light/OrganizationMatchesComponent.html
@@ -54,7 +54,7 @@
                                                     <img size="40" src="http://api.originbeta.net/defaultRecentMatch/1518910314231Capture.PNG" style="color: rgb(255, 255, 255); background-color: transparent; user-select: none; display: inline-flex; align-items: center; justify-content: center; font-size: 20px; border-radius: 0px; height: 40px; width: 40px;">
                                                     <br>
                                                 </td>
-                                                <td style="color: white; font-size:18px; padding-left: 24px; padding-right: 24px; height: 48px; text-align: left; font-size: 18px; font-weight: 800; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; background-color: inherit;">
+                                                <td style="color: black; font-size:18px; padding-left: 24px; padding-right: 24px; height: 48px; text-align: left; font-size: 18px; font-weight: 800; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; background-color: inherit;">
                                                     <span>3 - 2</span>
                                                 </td>
                                             </tr>
