--- a/content_builder/src/html/themes/obliviot/dark/OrganizationNewsComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationNewsComponent.html
@@ -30,8 +30,8 @@
                         <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title}">We are live with a very long title</span>
                     </div>
                 </div>
-                <div style="width: 100%;height: 68px; overflow-y: hidden;" data-component-value="{this.props.blog_content}">
-                    <p class="classes.obliviot_dark_news_body" >We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
+                <div style="width: 100%;height: 68px; overflow-y: hidden;">
+                    <span class="classes.obliviot_dark_news_body" data-component-value="{this.props.blog_content}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</span>
                 </div>
                 <div class="classes.obliviot_dark_news_decor"></div>
             </div>
