--- a/content_builder/src/html/themes/obliviot/dark/OrganizationBlogComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationBlogComponent.html
@@ -31,8 +31,8 @@
                             <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title_1}">We are live with a very long title</span>
                         </div>
                     </div>
-                    <div style="width: 100%;height: 68px; overflow-y: hidden;" data-component-value="{this.props.blog_content_1}">
-                        <p class="classes.obliviot_dark_news_body" >We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
+                    <div style="width: 100%;height: 68px; overflow-y: hidden;">
+                        <p class="classes.obliviot_dark_news_body" data-component-value="{this.props.blog_content_1}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
                     </div>
                     <div class="classes.obliviot_dark_news_decor"></div>
                 </div>
@@ -47,8 +47,8 @@
                             <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title_2}">We are live with a very long title</span>
                         </div>
                     </div>
-                    <div style="width: 100%;height: 68px; overflow-y: hidden;" data-component-value="{this.props.blog_content_2}">
-                        <p class="classes.obliviot_dark_news_body" >We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
+                    <div style="width: 100%;height: 68px; overflow-y: hidden;">
+                        <p class="classes.obliviot_dark_news_body" data-component-value="{this.props.blog_content_2}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
                     </div>
                     <div class="classes.obliviot_dark_news_decor"></div>
                 </div>
@@ -61,8 +61,8 @@
                             <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title_3}">We are live with a very long title</span>
                         </div>
                     </div>
-                    <div style="width: 100%;height: 68px; overflow-y: hidden;" data-component-value="{this.props.blog_content_3}">
-                        <p class="classes.obliviot_dark_news_body" >We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
+                    <div style="width: 100%;height: 68px; overflow-y: hidden;">
+                        <p class="classes.obliviot_dark_news_body" data-component-value="{this.props.blog_content_3}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
                     </div>
                     <div class="classes.obliviot_dark_news_decor"></div>
                 </div>
