--- a/content_builder/src/html/themes/obliviot/dark/OrganizationBlogComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationBlogComponent.html
@@ -22,49 +22,51 @@
    </head>
    <body>
       <div data-component-name="dark_OrganizationBlogComponent">
-        <div class="seven wide column">
-            <div class="classes.obliviot_darkBlogMaxContainer">
-                <img class="classes.obliviot_main_news_item_image" data-component-props="src={this.props.blog_media_1}" src="../images/news_test_1.jpg" />    
-                <div class="classes.obliviot_main_news_content_container">
-                    <div>
-                        <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                            <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title_1}">We are live with a very long title</span>
+        <div class="ui stackable two column grid">
+            <div class="seven wide column">
+                <div class="classes.obliviot_darkBlogMaxContainer">
+                    <img class="classes.obliviot_main_news_item_image" data-component-props="src={this.props.blog_media_1}" src="../images/news_test_1.jpg" />    
+                    <div class="classes.obliviot_main_news_content_container">
+                        <div>
+                            <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
+                                <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title_1}">We are live with a very long title</span>
+                            </div>
                         </div>
+                        <div style="width: 100%;height: 68px; overflow-y: hidden;">
+                            <p class="classes.obliviot_dark_news_body" data-component-value="{this.props.blog_content_1}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
+                        </div>
+                        <div class="classes.obliviot_dark_news_decor"></div>
                     </div>
-                    <div style="width: 100%;height: 68px; overflow-y: hidden;">
-                        <p class="classes.obliviot_dark_news_body" data-component-value="{this.props.blog_content_1}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
-                    </div>
-                    <div class="classes.obliviot_dark_news_decor"></div>
                 </div>
             </div>
-        </div>
-        <div class="nine wide column">
-            <div class="classes.obliviot_darkBlogMiniContainer">
-                <img class="classes.obliviot_main_news_item_mini_image" data-component-props="src={this.props.blog_media_2}" src="../images/news_mini_image.jpg" />    
-                <div class="classes.obliviot_main_news_content_container">
-                    <div>
-                        <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                            <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title_2}">We are live with a very long title</span>
+            <div class="nine wide column">
+                <div class="classes.obliviot_darkBlogMiniContainer">
+                    <img class="classes.obliviot_main_news_item_mini_image" data-component-props="src={this.props.blog_media_2}" src="../images/news_mini_image.jpg" />    
+                    <div class="classes.obliviot_main_news_content_container">
+                        <div>
+                            <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
+                                <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title_2}">We are live with a very long title</span>
+                            </div>
                         </div>
+                        <div style="width: 100%;height: 68px; overflow-y: hidden;">
+                            <p class="classes.obliviot_dark_news_body" data-component-value="{this.props.blog_content_2}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
+                        </div>
+                        <div class="classes.obliviot_dark_news_decor"></div>
                     </div>
-                    <div style="width: 100%;height: 68px; overflow-y: hidden;">
-                        <p class="classes.obliviot_dark_news_body" data-component-value="{this.props.blog_content_2}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
-                    </div>
-                    <div class="classes.obliviot_dark_news_decor"></div>
                 </div>
-            </div>
-            <div class="classes.obliviot_darkBlogMiniContainer">
-                <img class="classes.obliviot_main_news_item_mini_image" data-component-props="src={this.props.blog_media_3}" src="../images/news_mini_image.jpg" />    
-                <div class="classes.obliviot_main_news_content_container">
-                    <div>
-                        <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                            <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title_3}">We are live with a very long title</span>
+                <div class="classes.obliviot_darkBlogMiniContainer">
+                    <img class="classes.obliviot_main_news_item_mini_image" data-component-props="src={this.props.blog_media_3}" src="../images/news_mini_image.jpg" />    
+                    <div class="classes.obliviot_main_news_content_container">
+                        <div>
+                            <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
+                                <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title_3}">We are live with a very long title</span>
+                            </div>
                         </div>
+                        <div style="width: 100%;height: 68px; overflow-y: hidden;">
+                            <p class="classes.obliviot_dark_news_body" data-component-value="{this.props.blog_content_3}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
+                        </div>
+                        <div class="classes.obliviot_dark_news_decor"></div>
                     </div>
-                    <div style="width: 100%;height: 68px; overflow-y: hidden;">
-                        <p class="classes.obliviot_dark_news_body" data-component-value="{this.props.blog_content_3}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
-                    </div>
-                    <div class="classes.obliviot_dark_news_decor"></div>
                 </div>
             </div>
         </div>
