Put back Subscription menu

--- a/content_builder/src/html/themes/admin/OrganizationAdminMenuComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminMenuComponent.html
@@ -62,7 +62,16 @@
                         </div>
                     </div>
                 </a>
-                
+                <a class="item" data-component-props="onClick={(e)=>{this.props.handleMainMenuClick('subscription', e);}}">
+                    <div class="classes.menu_item">
+                        <div class="classes.menu_item_icon">
+                            <i class="dollar icon"></i>
+                        </div>
+                        <div class="classes.menu_item_label">
+                            Subscription
+                        </div>
+                    </div>
+                </a>
                 <div class="ui inverted accordion">    
                     <div data-component-value="{this.props.dropdown}">
                         <div class="title">Manage<i class="dropdown icon"></i></div>
