--- a/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
@@ -73,8 +73,7 @@
                         <div class="classes.obliviot_dark_section_title">MATCHES</div>
                         <div class="classes.obliviot_dark_section_view_more">VIEW MORE</div>
                     </div>
-                    <div id="matches_container" class="ui stackable three column grid">
-                        <div data-component-value="{this.props.recent_matches}">Matches</div>
+                    <div id="matches_container" data-component-value="{this.props.matchesContent}">
                     </div>
                     <div id="bottom_nav" class="classes.obliviot_dark_bottom_nav">
                         <div class="ui stackable five column grid">
