--- a/content_builder/src/html/themes/enigma/dark/OrganizationMatchesComponent.html
+++ b/content_builder/src/html/themes/enigma/dark/OrganizationMatchesComponent.html
@@ -42,7 +42,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div data-component-value="{this.props.recent_matches}"></div>
+                        <div data-component-value="{this.props.recent_matches}">matches</div>
                     </div>
                 </div>
             </div>
