converting enigma theme matches

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationMatchesComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationMatchesComponent.html
@@ -23,8 +23,8 @@
    </head>
    <body>
         <div data-component-name="dark_OrganizationMatchesComponent" class="classes.darkNavBG">
-            <div class="ui stackable three column grid">
-                <div data-component-value="{this.props.recent_matches}">Matches</div>
+            <div>
+                <div class="ui stackable three column grid" data-component-value="{this.props.recent_matches}">Matches</div>
             </div>
         </div>
    </body>
