--- a/content_builder/src/html/themes/obliviot/dark/OrganizationMatchesComponentElement.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationMatchesComponentElement.html
@@ -22,15 +22,15 @@
       </script>  
    </head>
    <body>
-        <div data-component-name="dark_OrganizationMatchesComponentElement" class="column">
-            <div>
+        <div data-component-name="dark_OrganizationMatchesComponentElement">
+            <div class="column">
                 <div class="classes.obliviot_dark_match_container">
                     <div class="classes.obliviot_dark_match_vs_container">
                         <img class="classes.obliviot_dark_match_vs_image" data-component-props="src={this.props.matches_image_1}" />
                         <div class="classes.obliviot_dark_match_vs_score" data-component-value="{this.props.matches_score}">10-8</div>
                         <img class="classes.obliviot_dark_match_vs_image" data-component-props="src={this.props.matches_image_2}" />
                     </div>
-                    <div class="classes.obliviot_dark_match_vs_date">22 AUG 2018</div>
+                    <div class="classes.obliviot_dark_match_vs_date" data-component-value="{this.props.matches_date}">22 AUG 2018</div>
                     <div class="classes.obliviot_dark_corner_win"></div>
                 </div>
             </div>
