fixing issues with blog controller

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationBlogComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationBlogComponent.html
@@ -24,7 +24,7 @@
       <div data-component-name="dark_OrganizationBlogComponent">
         <div class="ui stackable two column grid">
             <div class="seven wide column">
-                <div class="classes.obliviot_darkBlogMaxContainer">
+                <div class="classes.obliviot_darkBlogMaxContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_1);}}">
                     <img class="classes.obliviot_main_news_item_image" data-component-props="src={this.props.blog_media_1}" src="../images/news_test_1.jpg" />    
                     <div class="classes.obliviot_main_news_content_container">
                         <div>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="nine wide column">
-                <div class="classes.obliviot_darkBlogMiniContainer">
+                <div class="classes.obliviot_darkBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_2);}}">
                     <img class="classes.obliviot_main_news_item_mini_image" data-component-props="src={this.props.blog_media_2}" src="../images/news_mini_image.jpg" />    
                     <div class="classes.obliviot_main_news_content_container">
                         <div>
@@ -54,7 +54,7 @@
                         <div class="classes.obliviot_dark_news_decor"></div>
                     </div>
                 </div>
-                <div class="classes.obliviot_darkBlogMiniContainer">
+                <div class="classes.obliviot_darkBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_3);}}">
                     <img class="classes.obliviot_main_news_item_mini_image" data-component-props="src={this.props.blog_media_3}" src="../images/news_mini_image.jpg" />    
                     <div class="classes.obliviot_main_news_content_container">
                         <div>
