added logic to detrmine win or lose for matches badge display

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationMatchesComponentElement.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationMatchesComponentElement.html
@@ -31,7 +31,7 @@
                         <img class="classes.obliviot_dark_match_vs_image" data-component-props="src={this.props.matches_image_2}" />
                     </div>
                     <div class="classes.obliviot_dark_match_vs_date" data-component-value="{this.props.matches_date}">22 AUG 2018</div>
-                    <div class="classes.obliviot_dark_corner_win"></div>
+                    <div data-component-props="style={this.props.win_style}" class="classes.obliviot_dark_corner_win" ></div>
                 </div>
             </div>
         </div>
