made constrained scrolling container for news items obliviot dark

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
@@ -52,8 +52,10 @@
                                     <div class="classes.obliviot_dark_section_title">NEWS</div>
                                     <div class="classes.obliviot_dark_section_view_more">VIEW MORE</div>
                                 </div>
-                                <div id="news_div">
-                                    <div data-component-value="{this.props.newsContent}">News</div>
+                                <div id="news_div" class="classes.obliviot_dark_news_outer_constraint">
+                                    <div>
+                                        <div data-component-value="{this.props.newsContent}">News</div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="six wide column">
