--- a/content_builder/src/html/themes/obliviot/light/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/obliviot/light/OrganizationNavComponent.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
       <!-- Site Properties -->
-      <title>Organization Dark Demo</title>
+      <title>Organization light Demo</title>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" integrity="sha256-oDCP2dNW17Y1QhBwQ+u2kLaKxoauWvIGks3a4as9QKs= sha384-vQPhfJdJkfTCHP7ouiqoAojjcDFuU346yP8z/pRpSn0xsWOfkMd+DkNmxns9jy4l sha512-P6CxF6LlmmWe4kVo37D5SJGcvXhesfQO2T2XU0f3EWmslkSg0Rbu8qxUyX9rMX4dle+J71Fl3acSHM+S33OQtg==" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script
@@ -22,42 +22,42 @@
       </script>  
    </head>
    <body>
-        <div data-component-name="dark_OrganizationNavComponent">
+        <div data-component-name="light_OrganizationNavComponent">
             <div class="ui stackable two column grid">
                 <div class="six wide column">
-                    <img class="classes.obliviot_darkLogo" data-component-props="src={this.props.image_src}" src="../images/disrupt_logo.jpg" />
-                    <div class="classes.obliviot_dark_social_menu_container">
-                        <div class="classes.obliviot_dark_social_menu_item" data-component-value="{this.props.social_link1}">
+                    <img class="classes.obliviot_lightLogo" data-component-props="src={this.props.image_src}" src="../images/disrupt_logo.jpg" />
+                    <div class="classes.obliviot_light_social_menu_container">
+                        <div class="classes.obliviot_light_social_menu_item" data-component-value="{this.props.social_link1}">
                             <i class="fa fa-instagram"></i>
                         </div>
-                        <div class="classes.obliviot_dark_social_menu_item" data-component-value="{this.props.social_link2}">
+                        <div class="classes.obliviot_light_social_menu_item" data-component-value="{this.props.social_link2}">
                             <i class="fa fa-twitter"></i>
                         </div>
-                        <div class="classes.obliviot_dark_social_menu_item" data-component-value="{this.props.social_link3}">
+                        <div class="classes.obliviot_light_social_menu_item" data-component-value="{this.props.social_link3}">
                             <i class="fa fa-youtube"></i>
                         </div>
-                        <div class="classes.obliviot_dark_social_menu_item" data-component-value="{this.props.social_link4}">
+                        <div class="classes.obliviot_light_social_menu_item" data-component-value="{this.props.social_link4}">
                             <i class="fa fa-twitch"></i>
                         </div>
-                        <div class="classes.obliviot_dark_social_menu_item" data-component-value="{this.props.social_link5}">
+                        <div class="classes.obliviot_light_social_menu_item" data-component-value="{this.props.social_link5}">
                             <i class="fa fa-instagram"></i>
                         </div>
                     </div>
                 </div>
                 <div class="ten wide column">
                     <div class="classes.obliviot_nav_right">
-                        <div class="classes.obliviot_org_menu_dark_container">
-                            <a href="#"><div id="menu_login" class="classes.org_menu_obliviot_dark_item" data-component-props="onClick={this.props.handleLoginClick}">Login</div></a>
-                            <a href="#"><div id="menu_news" data-component-props="style={this.props.store_style} onClick={this.props.handleStoreClick}" class="classes.org_menu_obliviot_dark_item">Store</div></a>
-                            <a href="#"><div id="roster_button" data-component-props="style={this.props.roster_style} onClick={this.props.handleRosterButtonClick}" class="classes.org_menu_obliviot_dark_item">Rosters</div>
+                        <div class="classes.obliviot_org_menu_light_container">
+                            <a href="#"><div id="menu_login" class="classes.org_menu_obliviot_light_item" data-component-props="onClick={this.props.handleLoginClick}">Login</div></a>
+                            <a href="#"><div id="menu_news" data-component-props="style={this.props.store_style} onClick={this.props.handleStoreClick}" class="classes.org_menu_obliviot_light_item">Store</div></a>
+                            <a href="#"><div id="roster_button" data-component-props="style={this.props.roster_style} onClick={this.props.handleRosterButtonClick}" class="classes.org_menu_obliviot_light_item">Rosters</div>
                                 <div class="classes.obliviot_dropdown_container" data-component-props="style={this.props.roster_dropdown_style}">
                                     <div data-component-value="{this.props.dropdown_item}">dropdown</div>
                                 </div>
                             </a>
-                            <a href="#"><div id="sponsers_button" data-component-props="style={this.props.sponsers_style} onClick={this.props.handleSponsersClick}" class="classes.org_menu_obliviot_dark_item">Sponsers</div></a>
-                            <a href="#"><div id="about_button" data-component-props="style={this.props.about_style} onClick={this.props.handleAboutClick}" class="classes.org_menu_obliviot_dark_item">About</div></a>
-                            <a href="#"><div id="news_button" class="classes.org_menu_obliviot_dark_item">News</div></a>
-                            <a href="#home_cont"><div id="menu_home" data-component-props="style={this.props.home_style}"  class="classes.org_menu_obliviot_dark_item">Home</div></a>
+                            <a href="#"><div id="sponsers_button" data-component-props="style={this.props.sponsers_style} onClick={this.props.handleSponsersClick}" class="classes.org_menu_obliviot_light_item">Sponsers</div></a>
+                            <a href="#"><div id="about_button" data-component-props="style={this.props.about_style} onClick={this.props.handleAboutClick}" class="classes.org_menu_obliviot_light_item">About</div></a>
+                            <a href="#"><div id="news_button" class="classes.org_menu_obliviot_light_item">News</div></a>
+                            <a href="#home_cont"><div id="menu_home" data-component-props="style={this.props.home_style}"  class="classes.org_menu_obliviot_light_item">Home</div></a>
                         </div>
                     </div>
                 </div>
