--- a/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
@@ -40,9 +40,7 @@
                         <div class="classes.obliviot_dark_section_view_more">VIEW MORE</div>
                     </div>
                     <div class="classes.obliviot_dark_twitch_container">
-                        <div class="ui stackable three column grid">
-                            <div data-component-value="{this.props.stitchContent}">Stitch</div>
-                        </div>
+                        <div data-component-value="{this.props.twitchContent}">twitch</div>
                     </div>
                     <div>
                         <div class="ui stackable two column grid">
