--- a/content_builder/src/html/themes/individual/IndividualBasicInfoComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualBasicInfoComponent.html
@@ -66,7 +66,7 @@
                     <div class="classes.individual_accomplishment_container">
                         <h2 class="classes.individual_accomplishment_header">Accomplishments</h2>
                         <div style="padding: 10px;">
-                            <p data-component-value="{this.props.accomplishments}" id="basic_accomplishments"></p>
+                            <p data-component-value="{this.props.accomplishments}" id="basic_accomplishments">filler</p>
                         </div>
                     </div>
                 </div>
