--- a/content_builder/src/html/themes/obliviot/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/light/OrganizationPageComponent.html
@@ -45,7 +45,7 @@
                     <div class="classes.obliviot_light_twitch_container">
                         <div data-component-value="{this.props.twitchContent}">twitch</div>
                     </div>
-                    <div data-component-value="{this.props.newsObliviotContent}">
+                    <div data-component-props="style={this.props.obliviot_hidden_style}">
                         <div class="ui stackable two column grid">
                             <div class="ten wide column">
                                 <div class="classes.obliviot_light_section_control_container">
