--- a/content_builder/src/html/themes/individual/IndividualTwitterStatsComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualTwitterStatsComponent.html
@@ -38,7 +38,7 @@
                     </div>
                     <div id="twitter_followers_count" class="classes.indiviual_stats_container">
                         <span class="classes.individual_stats_title">Followers: </span>
-                        <span data-component-value="{this.props.twitter_followers_count" class="classes.individual_stats_data">12345</span>
+                        <span data-component-value="{this.props.twitter_followers_count}" class="classes.individual_stats_data">12345</span>
                     </div>
                     <div id="twitter_statues_count" class="classes.indiviual_stats_container">
                         <span class="classes.individual_stats_title">Statuses: </span>
