--- a/content_builder/src/html/themes/obliviot/dark/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationNavComponent.html
@@ -51,6 +51,7 @@
                             <a href="#"><div id="menu_news" data-component-props="style={this.props.store_style} onClick={this.props.handleStoreClick}" class="classes.org_menu_obliviot_dark_item">Store</div></a>
                             <a href="#"><div id="roster_button" data-component-props="style={this.props.roster_style} onClick={this.props.handleRosterButtonClick}" class="classes.org_menu_obliviot_dark_item">Rosters</div>
                                 <div class="classes.obliviot_dropdown_container" data-component-props="style={this.props.roster_dropdown_style}">
+                                    <div class="classes.obliviot_dropdown_container_close" data-component-props="onClick={this.props.handleCloseClick}">X</div>
                                     <div data-component-value="{this.props.dropdown_item}">dropdown</div>
                                 </div>
                             </a>
