added code to hide roster button if no rosters present

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationMobileMenuComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationMobileMenuComponent.html
@@ -58,7 +58,7 @@
                                 Youtube
                             </a>
                 </div>
-                <div class="classes.dark_mobile_menu_item">
+                <div class="classes.dark_mobile_menu_item" data-component-props="style={this.props.mobile_roster_item}">
                         <div class="classes.dark_mobile_menu_item_box">
                                 Rosters
                             </div>
