--- a/content_builder/src/html/themes/obliviot/light/OrganizationTwitchComponent.html
+++ b/content_builder/src/html/themes/obliviot/light/OrganizationTwitchComponent.html
@@ -24,7 +24,7 @@
    <body>
       <div data-component-name="light_OrganizationTwitchComponent">
             <div class="classes.obliviot_light_twitch_feed_container">
-                <iframe title="ifr" width="300px" height="150px" data-component-props="allowFullScreen src={this.props.twitch_url}" src="https://player.twitch.tv/?channel=ninja" frameborder="0" allowfullscreen=""></iframe>
+                <iframe data-component-props="src={this.props.twitch_url}" frameborder="0" allowfullscreen="true" scrolling="no" height="150" width="300"></iframe>
             </div>
         </div>
    </body>
